# site

./: main.py  pyproject.toml  telegram.py
templates/: index.html  robots.txt
templates/css/: style1.css
templates/js/: script2.js
