[tool.poetry]
name = "leonid"
version = "0.1.0"
description = "For TG Man"
authors = ["Leonid-poc <legeorg2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
gunicorn = "^22.0.0"
pytelegrambotapi = "^4.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
